# dino_jump_watercolor

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: collision.rs  components.rs  constants.rs  main.rs  pixel_mask.rs  resources.rs
src/plugins/: dino_plugin.rs  game_plugin.rs  hud_plugin.rs  mod.rs  road_plugin.rs  sky_plugin.rs  tree_plugin.rs
